--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.5",
     "@quasar/extras": "^1.16.9",
     "pinia": "^2.1.7",
     "quasar": "^2.14.2",
