--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@quasar/extras": "^1.16.9",
+    "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "quasar": "^2.14.2",
     "vue": "^3.3.11",
